cloud/istio/v1.18/6-helm-chart/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hellokv-gateway
spec:
  selector:
    istio: ingress # the helm chart istio/gateway use a different label
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hellokv
spec:
  hosts:
  - "*"
  gateways:
  - hellokv-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: hellokv-api.default.svc.cluster.local
